click on edit in line show

--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,15 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
 
     <title>React App ToDo List</title>
   </head>
   <body>
     <div id="root" class="app"></div>
-    <div  class="box-modal" id="box-modal"></div>
+    <div class="box-modal" id="box-modal"></div>
   </body>
 </html>
